--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <nav> About Us </nav>
             <nav> Contact Us </nav>
             <nav> Our Services </nav>
+            <nav> login/signup</nav>
             <h1>S K M vidya Vihar, srinagar</h1>
         </top>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eius voluptatum, veniam fugiat laboriosam necessitatibus labore hic, corporis velit, eos reiciendis? Ullam optio consequatur quasi at reprehenderit non numquam fugiat blanditiis earum aliquam deleniti recusandae suscipit, sunt veniam tempore accusamus alias, aut sit sed possimus, itaque nobis cumque voluptates. Pariatur tempore temporibus perferendis! Dignissimos delectus laborum officiis saepe nobis! Velit quisquam facere ab mollitia. Laudantium debitis quo explicabo quaerat, iste consequatur quae veritatis aspernatur quis. Repudiandae dolor quas culpa laborum possimus, vero, est neque magni veniam eum molestiae ex sint eos iste quos nobis repellat fuga corporis corrupti. Similique, asperiores?
